--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                     <a href="#contact">Contactanos</a>
                 </li>
                 <li>
-                    <a href="singin.html" class="button button--ghost">Iniciar Sesion</a>
+                    <a href="https://integrador-nucba-sand.vercel.app/signin.html" class="button button--ghost">Iniciar
+                        Sesion</a>
                 </li>
                 <li>
-                    <a href="singup.html" class="button button--ghost">Registrarse</a>
+                    <a href="https://integrador-nucba-sand.vercel.app/signup.html"
+                        class="button button--ghost">Registrarse</a>
                 </li>
             </ul>
         </nav>
