--- a/signin.html
+++ b/signin.html
@@ -34,10 +34,12 @@
                     <a href="index.html#footer">Contactanos</a>
                 </li>
                 <li>
-                    <a href="signup.html" class="button button--ghost">Iniciar Sesion</a>
+                    <a href="https://integrador-nucba-sand.vercel.app/signin.html" class="button button--ghost">Iniciar
+                        Sesion</a>
                 </li>
                 <li>
-                    <a href="signin.html" class="button button--ghost">Registrarse</a>
+                    <a href="https://integrador-nucba-sand.vercel.app/signup.html"
+                        class="button button--ghost">Registrarse</a>
                 </li>
             </ul>
         </nav>
@@ -46,7 +48,8 @@
     <!-- form -->
     <form action="" class="form">
         <h2 class="form__title">Registrarse</h2>
-        <p class="form__paragraph">ya tienes cuenta?<a href="signup.html" class="form__link">Entra aquí</a></p>
+        <p class="form__paragraph">ya tienes cuenta?<a href="https://integrador-nucba-sand.vercel.app/signin.html"
+                class="form__link">Entra aquí</a></p>
         <div class="form__container">
             <div class="form__group">
                 <input type="text" name="" id="name" class="form__input" placeholder=" ">
