--- a/signin.html
+++ b/signin.html
@@ -34,11 +34,11 @@
                     <a href="index.html#footer">Contactanos</a>
                 </li>
                 <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signin.html" class="button button--ghost">Iniciar
+                    <a href="https://integrador-nucba-sand.vercel.app/signup.html" class="button button--ghost">Iniciar
                         Sesion</a>
                 </li>
                 <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signup.html"
+                    <a href="https://integrador-nucba-sand.vercel.app/signin.html"
                         class="button button--ghost">Registrarse</a>
                 </li>
             </ul>
@@ -48,7 +48,7 @@
     <!-- form -->
     <form action="" class="form">
         <h2 class="form__title">Registrarse</h2>
-        <p class="form__paragraph">ya tienes cuenta?<a href="https://integrador-nucba-sand.vercel.app/signin.html"
+        <p class="form__paragraph">ya tienes cuenta?<a href="https://integrador-nucba-sand.vercel.app/signup.html"
                 class="form__link">Entra aquí</a></p>
         <div class="form__container">
             <div class="form__group">
