--- a/signup.html
+++ b/signup.html
@@ -34,11 +34,11 @@
                     <a href="index.html#footer">Contactanos</a>
                 </li>
                 <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signin.html" class="button button--ghost">Iniciar
+                    <a href="https://integrador-nucba-sand.vercel.app/signup.html" class="button button--ghost">Iniciar
                         Sesion</a>
                 </li>
                 <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signup.html"
+                    <a href="https://integrador-nucba-sand.vercel.app/signin.html"
                         class="button button--ghost">Registrarse</a>
                 </li>
             </ul>
@@ -49,7 +49,7 @@
     <form action="" class="form">
         <h2 class="form__title">Inicia Sesión</h2>
         <p class="form__paragraph">Aún no tienes una cuenta?<a
-                href="https://integrador-nucba-sand.vercel.app/signup.html" class="form__link">Entra aquí</a></p>
+                href="https://integrador-nucba-sand.vercel.app/signin.html" class="form__link">Entra aquí</a></p>
         <div class="form__container">
             <div class="form__group">
                 <input type="text" name="" id="name" class="form__input" placeholder=" ">
