--- a/index.html
+++ b/index.html
@@ -1,239 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrador I - Nucba</title>
-    <!-- link to css -->
-    <link rel="stylesheet" href="style.css">
-    <!-- box icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
-</head>
-
-
-<body>
-    <!--=============== HEADER ===============-->
-    <header class="header">
-        <i class="bx bx-moon change-theme" id="theme-button"></i>
-
-        <nav class="navbar">
-            <label for="menu-toggle" class="menu-label">
-                <img src="assets/menu.png" alt="Menu" />
-            </label>
-            <input type="checkbox" id="menu-toggle" />
-
-            <ul class="navbar-list">
-                <li class="font"><a href="#home">Home</a></li>
-                <li><a href="#about">Nosotros</a></li>
-                <li>
-                    <a href="#games">Productos</a>
-                </li>
-                <li>
-                    <a href="#contact">Contactanos</a>
-                </li>
-                <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signin.html" class="button button--ghost">Iniciar
-                        Sesion</a>
-                </li>
-                <li>
-                    <a href="https://integrador-nucba-sand.vercel.app/signup.html"
-                        class="button button--ghost">Registrarse</a>
-                </li>
-            </ul>
-        </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Web Design Mastery | Pathway</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav__logo">Pathway<span>.</span></div>
+      <ul class="nav__links">
+        <li class="link"><a href="#">Home</a></li>
+        <li class="link"><a href="#">Destinations</a></li>
+        <li class="link"><a href="#">Pricing</a></li>
+        <li class="link"><a href="#">Reviews</a></li>
+      </ul>
+      <button class="btn">Contact Us</button>
+    </nav>
+    <header>
+      <div class="section__container header__container">
+        <div class="header__image">
+          <img src="assets/header-1.jpg" alt="header" />
+          <img src="assets/header-2.jpg" alt="header" />
+        </div>
+        <div class="header__content">
+          <div>
+            <p class="sub__header">Book Now</p>
+            <h1>The Smiling 😊<br />agent for travel</h1>
+            <p class="section__subtitle">
+              Make your travel more enjoyable with us. We are the best travel
+              agency and we are providing the best travel services for our
+              clients.
+            </p>
+            <div class="action__btns">
+              <button class="btn">Plan a Trip</button>
+              <div class="story">
+                <div class="video__image">
+                  <img src="assets/story.jpg" alt="story" />
+                  <span><i class="ri-play-fill"></i></span>
+                </div>
+                <span>Watch our story</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
-    <!-- Home -->
-    <section class="home section" id="home">
-        <div class="home__container container grid">
-            <div class="home__content grid">
-                <div class="home__img">
-                    <svg class="home__blob" viewBox="0 0 200 187">
-                        <mask id="mask0" mask-type="alpha">
-                            <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
-                            130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
-                            97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
-                            0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                        </mask>
-                        <g mask="url(#mask0)">
-                            <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                            165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                            129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                            -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                            <!--==================== 
-                                Insert your image in the Img folder and Change your image |
-                                Center your image with X: horizontal, Y: vertical 
-                            ====================-->
-                            <image class="home__blob-img" x="12" y="18" href="assets/slider_img01.png" />
-                        </g>
-                    </svg>
-                </div>
-
-                <div class="home__data">
-                    <h1 class="home__title">Hola, somos NFTSPORTS</h1>
-                    <h3 class="home__subtitle">El mejor marketplace de nft's</h3>
-                    <p class="home__description">Aquí, los artistas y los entusiastas de la tecnología blockchain se
-                        unen.</p>
-
-                </div>
-            </div>
+    <section class="section__container destination__container">
+      <div class="section__header">
+        <div>
+          <h2 class="section__title">Explore top destinations</h2>
+          <p class="section__subtitle">
+            Explore your suitable and dream places around the world. Here you
+            can find your right destination.
+          </p>
         </div>
-    </section>
-    <!-- About -->
-    <section class="about" id="about">
-        <div class="heading">
-            <h1>
-                Quiénes Somos<br> Apasionados por los eSports y Comprometidos Contigo</h1>
+        <div class="destination__nav">
+          <span><i class="ri-arrow-left-s-line"></i></span>
+          <span><i class="ri-arrow-right-s-line"></i></span>
         </div>
-        <!-- Container Content -->
-        <div class="about-container">
-            <!-- Box 1 -->
-            <div class="box">
-                <img src="assets/team01.png" alt="">
-                <h2>KILLER MASTER</h2>
-                <span>Blockchain Expert</span>
-
-            </div>
-            <!-- Box 2 -->
-            <div class="box">
-                <img src="assets/team02.png" alt="">
-                <h2>TANU MARK</h2>
-                <span>Developer</span>
-
-            </div>
-            <!-- Box 3 -->
-            <div class="box">
-                <img src="assets/team03.png" alt="">
-                <h2>THOMPSON SCOT</h2>
-                <span>Art Director</span>
-
-            </div>
-            <!-- Box 4 -->
-            <div class="box">
-                <img src="assets/team04.png" alt="">
-                <h2>SHAKH DANIAL</h2>
-                <span>Crypto Advisor</span>
-
-            </div>
+      </div>
+      <div class="destination__grid">
+        <div class="destination__card">
+          <img src="assets/destination-1.jpg" alt="destination" />
+          <div class="destination__details">
+            <p class="destination__title">Banff</p>
+            <p class="destination__subtitle">Canada</p>
+          </div>
         </div>
-    </section>
-    <!-- Games -->
-    <section class="games" id="games">
-        <div class="heading">
-            <h1>
-                Explora Nuestro Universo de Juegos<br> Diversión sin Límites a tu Alcance</h1>
+        <div class="destination__card">
+          <img src="assets/destination-2.jpg" alt="destination" />
+          <div class="destination__details">
+            <p class="destination__title">Machu Picchu</p>
+            <p class="destination__subtitle">Peru</p>
+          </div>
         </div>
-        <!-- Games content-->
-        <div class="games-container">
-            <!-- Box 1 -->
-            <div class="box">
-                <img src="assets/nft_img01.jpg" alt="">
-                <span>WOLF GAMING ART</span>
-                <h2>Alax Max <br>CREATOR</h2>
-                <h3 class="price">1.002 <span>ETH</span></h3>
-                <i class='bx bx-cart-alt'></i>
-                <i class='bx bx-heart'></i>
-            </div>
-            <!-- Box 2 -->
-            <div class="box">
-                <img src="assets/nft_img02.jpg" alt="">
-                <span>GIRL FIREFLY ART</span>
-                <h2>Alax Max <br>CREATOR</h2>
-                <h3 class="price">1.002 <span>ETH</span></h3>
-                <i class='bx bx-cart-alt'></i>
-                <i class='bx bx-heart'></i>
-            </div>
-            <!-- Box 3 -->
-            <div class="box">
-                <img src="assets/nft_img03.jpg" alt="">
-                <span>FOREST PRINCESS</span>
-                <h2>Alax Max <br>CREATOR</h2>
-                <h3 class="price">1.002 <span>ETH</span></h3>
-                <i class='bx bx-cart-alt'></i>
-                <i class='bx bx-heart'></i>
-            </div>
+        <div class="destination__card">
+          <img src="assets/destination-3.jpg" alt="destination" />
+          <div class="destination__details">
+            <p class="destination__title">Lauterbrunnen</p>
+            <p class="destination__subtitle">Switzerland</p>
+          </div>
         </div>
+        <div class="destination__card">
+          <img src="assets/destination-4.jpg" alt="destination" />
+          <div class="destination__details">
+            <p class="destination__title">Zhangjiajie</p>
+            <p class="destination__subtitle">China</p>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <!-- contact -->
-    <div class="contact-form" id="contact">
-        <div class="container-contact">
-            <div class="box-info">
-                <h1 class="form-contact">CONTÁCTATE CON NOSOTROS</h1>
-                <div class="data">
-                    <p><i class='bx bxs-phone'></i>+54 9 351 123 4567</p>
-                    <p><i class='bx bxs-envelope'></i>info@cordosports.com</p>
-                    <p><i class='bx bx-current-location'></i>Cordoba - Argentina</p>
-                </div>
-                <div class="links">
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-youtube'></i></a>
-                </div>
+    <section class="trip">
+      <div class="section__container trip__container">
+        <h2 class="section__title">Best trip package</h2>
+        <p class="section__subtitle">
+          Explore your suitable and dream places around the world. Here you can
+          find your right destination.
+        </p>
+        <div class="trip__grid">
+          <div class="trip__card">
+            <img src="assets/trip-1.jpg" alt="trip" />
+            <div class="trip__details">
+              <p>Wasserwerk Frelberg, Germany</p>
+              <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
+              <div class="booking__price">
+                <div class="price"><span>From</span> $300</div>
+                <button class="book__now">Book Now</button>
+              </div>
             </div>
-            <form action="" class="form-sub">
-                <div class="input-box">
-                    <input type="text" required placeholder="Nombre">
-                </div>
-                <div class="input-box">
-                    <input type="email" required placeholder="Email">
-                </div>
-                <div class="input-box">
-                    <input type="text" required placeholder="Asunto">
-                </div>
-                <div class="input-box">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea>
-                </div>
-                <button type="submit">Enviar mensaje</button>
-
-
-            </form>
-        </div>
-    </div>
-
-
-    <!-- Footer -->
-    <section class="footer" id="footer">
-        <div class="footer-box">
-            <a href="#" class="logo"><i class='bx bxs-basket'></i>CORDOSPORT</a>
-            <p>Colon, 1500<br>Cordoba Capital, Cordoba</p>
-            <div class="social">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-youtube'></i></a>
+          </div>
+          <div class="trip__card">
+            <img src="assets/trip-2.jpg" alt="trip" />
+            <div class="trip__details">
+              <p>Patagonia, Argentina and Chile</p>
+              <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
+              <div class="booking__price">
+                <div class="price"><span>From</span> $450</div>
+                <button class="book__now">Book Now</button>
+              </div>
             </div>
+          </div>
+          <div class="trip__card">
+            <img src="assets/trip-3.jpg" alt="trip" />
+            <div class="trip__details">
+              <p>The Dolomites, Italy</p>
+              <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
+              <div class="booking__price">
+                <div class="price"><span>From</span> $400</div>
+                <button class="book__now">Book Now</button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="footer-box">
-            <h2>Games</h2>
-            <a href="#">WOLF GAMING ART</a>
-            <a href="#">GIRL FIREFLY ART</a>
-            <a href="#">FOREST PRINCESS</a>
+        <div class="view__all">
+          <button class="btn">View All</button>
         </div>
-        <div class="footer-box">
-            <h2>Enlaces importantes</h2>
-            <a href="#">Pagos</a>
-            <a href="#">Terminos de uso</a>
-            <a href="#">Blog</a>
-        </div>
-        <div class="footer-box">
-            <h2>Newsletter</h2>
-            <p>Obten un descuento<br> suscribiendote</p>
-            <form action="">
-                <i class='bx bxs-envelope'></i>
-                <input type="email" name="" id="" placeholder="Ingresa tu email">
-                <i class='bx bx-right-arrow-alt'></i>
-            </form>
-        </div>
-
+      </div>
     </section>
 
+    <section class="gallary">
+      <div class="section__container gallary__container">
+        <div class="image__gallary">
+          <div class="gallary__col">
+            <img src="assets/gallery-1.jpg" alt="gallary" />
+          </div>
+          <div class="gallary__col">
+            <img src="assets/gallery-2.jpg" alt="gallary" />
+            <img src="assets/gallery-3.jpg" alt="gallary" />
+          </div>
+        </div>
+        <div class="gallary__content">
+          <div>
+            <h2 class="section__title">
+              Our trip gallary that will inspire you
+            </h2>
+            <p class="section__subtitle">
+              Explore your suitable and dream places around the world. Here you
+              can find your right destination.
+            </p>
+            <button class="btn">View All</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="subscribe">
+      <div class="section__container subscribe__container">
+        <div class="subscribe__content">
+          <h2 class="section__title">Subscribe to get special prize</h2>
+          <p class="section__subtitle">
+            Explore your suitable and dream places around the world. Here you
+            can find your right destination.
+          </p>
+        </div>
+        <div class="subscribe__form">
+          <form>
+            <input type="email" placeholder="Your email here" />
+            <button class="btn" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </section>
 
-
-</body>
-
+    <footer class="footer">
+      <div class="section__container footer__container">
+        <div class="footer__col">
+          <h3>Pathway<span>.</span></h3>
+          <p>
+            Explore your suitable and dream places around the world. Here you
+            can find your right destination.
+          </p>
+        </div>
+        <div class="footer__col">
+          <h4>Support</h4>
+          <p>FAQs</p>
+          <p>Terms & Conditions</p>
+          <p>Privacy Policy</p>
+          <p>Contact Us</p>
+        </div>
+        <div class="footer__col">
+          <h4>Address</h4>
+          <p>
+            <span>Address:</span> 280 Wilson Street, Cima, California, 92323,
+            United States
+          </p>
+          <p><span>Email:</span> info@pathway.com</p>
+          <p><span>Phone:</span> +91 9876543210</p>
+        </div>
+      </div>
+      <div class="footer__bar">
+        Copyright © 2023 Web Design Mastery. All rights reserved.
+      </div>
+    </footer>
+  </body>
 </html>
