--- a/index.html
+++ b/index.html
@@ -9,215 +9,269 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Pathway</title>
+    <title>Web Design Mastery | Nike</title>
   </head>
   <body>
-    <nav>
-      <div class="nav__logo">Pathway<span>.</span></div>
-      <ul class="nav__links">
-        <li class="link"><a href="#">Home</a></li>
-        <li class="link"><a href="#">Destinations</a></li>
-        <li class="link"><a href="#">Pricing</a></li>
-        <li class="link"><a href="#">Reviews</a></li>
-      </ul>
-      <button class="btn">Contact Us</button>
-    </nav>
     <header>
-      <div class="section__container header__container">
-        <div class="header__image">
-          <img src="assets/header-1.jpg" alt="header" />
-          <img src="assets/header-2.jpg" alt="header" />
+      <nav>
+        <ul class="nav__links">
+          <li class="link logo">NIKE</li>
+          <li class="link">MEN</li>
+          <li class="link">WOMEN</li>
+          <li class="link">KIDS</li>
+          <li class="link">SPORTS</li>
+          <li class="link">BRANDS</li>
+          <li class="link">CUSTOMIZE</li>
+        </ul>
+        <div class="social__icons">
+          <span><i class="ri-facebook-fill"></i></span>
+          <span><i class="ri-twitter-fill"></i></span>
+          <span><i class="ri-google-fill"></i></span>
+          <span><i class="ri-instagram-line"></i></span>
         </div>
+      </nav>
+      <div class="section_container header__container">
         <div class="header__content">
-          <div>
-            <p class="sub__header">Book Now</p>
-            <h1>The Smiling 😊<br />agent for travel</h1>
-            <p class="section__subtitle">
-              Make your travel more enjoyable with us. We are the best travel
-              agency and we are providing the best travel services for our
-              clients.
-            </p>
-            <div class="action__btns">
-              <button class="btn">Plan a Trip</button>
-              <div class="story">
-                <div class="video__image">
-                  <img src="assets/story.jpg" alt="story" />
-                  <span><i class="ri-play-fill"></i></span>
-                </div>
-                <span>Watch our story</span>
-              </div>
-            </div>
-          </div>
+          <h1>NIKE<br />SHOES</h1>
+          <p>SIGN UP AND GET 50% OFF</p>
         </div>
       </div>
     </header>
-
-    <section class="section__container destination__container">
-      <div class="section__header">
-        <div>
-          <h2 class="section__title">Explore top destinations</h2>
-          <p class="section__subtitle">
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
-        </div>
-        <div class="destination__nav">
-          <span><i class="ri-arrow-left-s-line"></i></span>
-          <span><i class="ri-arrow-right-s-line"></i></span>
-        </div>
-      </div>
-      <div class="destination__grid">
-        <div class="destination__card">
-          <img src="assets/destination-1.jpg" alt="destination" />
-          <div class="destination__details">
-            <p class="destination__title">Banff</p>
-            <p class="destination__subtitle">Canada</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="assets/destination-2.jpg" alt="destination" />
-          <div class="destination__details">
-            <p class="destination__title">Machu Picchu</p>
-            <p class="destination__subtitle">Peru</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="assets/destination-3.jpg" alt="destination" />
-          <div class="destination__details">
-            <p class="destination__title">Lauterbrunnen</p>
-            <p class="destination__subtitle">Switzerland</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="assets/destination-4.jpg" alt="destination" />
-          <div class="destination__details">
-            <p class="destination__title">Zhangjiajie</p>
-            <p class="destination__subtitle">China</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="trip">
-      <div class="section__container trip__container">
-        <h2 class="section__title">Best trip package</h2>
-        <p class="section__subtitle">
-          Explore your suitable and dream places around the world. Here you can
-          find your right destination.
-        </p>
-        <div class="trip__grid">
-          <div class="trip__card">
-            <img src="assets/trip-1.jpg" alt="trip" />
-            <div class="trip__details">
-              <p>Wasserwerk Frelberg, Germany</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
-              <div class="booking__price">
-                <div class="price"><span>From</span> $300</div>
-                <button class="book__now">Book Now</button>
-              </div>
-            </div>
-          </div>
-          <div class="trip__card">
-            <img src="assets/trip-2.jpg" alt="trip" />
-            <div class="trip__details">
-              <p>Patagonia, Argentina and Chile</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
-              <div class="booking__price">
-                <div class="price"><span>From</span> $450</div>
-                <button class="book__now">Book Now</button>
-              </div>
-            </div>
-          </div>
-          <div class="trip__card">
-            <img src="assets/trip-3.jpg" alt="trip" />
-            <div class="trip__details">
-              <p>The Dolomites, Italy</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
-              <div class="booking__price">
-                <div class="price"><span>From</span> $400</div>
-                <button class="book__now">Book Now</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="view__all">
-          <button class="btn">View All</button>
-        </div>
-      </div>
-    </section>
-
-    <section class="gallary">
-      <div class="section__container gallary__container">
-        <div class="image__gallary">
-          <div class="gallary__col">
-            <img src="assets/gallery-1.jpg" alt="gallary" />
-          </div>
-          <div class="gallary__col">
-            <img src="assets/gallery-2.jpg" alt="gallary" />
-            <img src="assets/gallery-3.jpg" alt="gallary" />
-          </div>
-        </div>
-        <div class="gallary__content">
-          <div>
-            <h2 class="section__title">
-              Our trip gallary that will inspire you
-            </h2>
-            <p class="section__subtitle">
-              Explore your suitable and dream places around the world. Here you
-              can find your right destination.
+    <main class="main__container">
+      <div class="main__content">
+        <section class="service__container">
+          <div class="service__card">
+            <span><i class="ri-flight-takeoff-fill"></i></span>
+            <h4>FREE SHIPPING</h4>
+            <p>
+              Online shopping offers convenience, a vast selection of products,
+              and the ability to shop from anywhere, anytime.
             </p>
-            <button class="btn">View All</button>
+            <a href="#">Click Here</a>
           </div>
-        </div>
-      </div>
-    </section>
+          <div class="service__card">
+            <span><i class="ri-truck-line"></i></span>
+            <h4>ON TIME DELIVERY</h4>
+            <p>
+              E-commerce companies handle the logistics of delivering products
+              to customers' doorsteps.
+            </p>
+            <a href="#">Click Here</a>
+          </div>
+          <div class="service__card">
+            <span><i class="ri-time-line"></i></span>
+            <h4>REVIEWS & RATINGS</h4>
+            <p>
+              E-commerce platforms often have a review and rating system where
+              customers can share their feedback.
+            </p>
+            <a href="#">Click Here</a>
+          </div>
+          <div class="service__card">
+            <span><i class="ri-customer-service-2-line"></i></span>
+            <h4>CUSTOMER SUPPORT</h4>
+            <p>
+              E-commerce companies offer customer support services to assist
+              customers with their queries, concerns, and issues.
+            </p>
+            <a href="#">Click Here</a>
+          </div>
+        </section>
 
-    <section class="subscribe">
-      <div class="section__container subscribe__container">
-        <div class="subscribe__content">
-          <h2 class="section__title">Subscribe to get special prize</h2>
-          <p class="section__subtitle">
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
-        </div>
-        <div class="subscribe__form">
-          <form>
-            <input type="email" placeholder="Your email here" />
-            <button class="btn" type="submit">Send</button>
-          </form>
-        </div>
-      </div>
-    </section>
+        <section class="banner">
+          <div class="banner__content">
+            <p class="subtitle">OFFER OF THE MONTH</p>
+            <h4 class="title">PHANTOM VISION ELITE DYNAMIC</h4>
+            <p class="description">
+              The Nike Phantom Vision Elite Dynamic shoes combine comfort,
+              performance, and style. Designed for football (soccer) players,
+              they feature a dynamic fit collar for agility and a precise touch.
+              With a lightweight design and excellent traction, these shoes
+              offer top-notch performance on the field.
+            </p>
+            <div class="price"><span>$500</span> <del>$1000</del></div>
+            <div class="countdown">
+              <div class="square">
+                <p>09</p>
+                <span>HOURS</span>
+              </div>
+              <div class="square">
+                <p>56</p>
+                <span>MINUTES</span>
+              </div>
+              <div class="square">
+                <p>11</p>
+                <span>SECONDS</span>
+              </div>
+            </div>
+            <button>SHOP NOW</button>
+          </div>
+          <div class="banner__image"></div>
+        </section>
 
-    <footer class="footer">
+        <section class="collection__container">
+          <div class="collection__image">
+            <img src="assets/collection-1.png" alt="collection" />
+            <h4>STEFAN JANOSKI MAX</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-2.png" alt="collection" />
+            <h4>VANDAL HIGH SUPREME</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-3.png" alt="collection" />
+            <h4>NEW ZOOM</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-4.png" alt="collection" />
+            <h4>FIT SHOES</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__card">
+            <h4>MEN'S RUNNING SHOES</h4>
+            <p>SIGN UP NOW AND GET 50% OFF</p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-5.png" alt="collection" />
+          </div>
+          <div class="collection__banner">
+            <div class="collection__banner__content">
+              RUN,<br />EAT, SLEEP<br />AND<br />REPEAT
+            </div>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-6.png" alt="collection" />
+            <h4>SPORTS SHOES</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-7.png" alt="collection" />
+            <h4>MEN SHOES</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-8.png" alt="collection" />
+            <h4>NIKE AIR SHOES</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+          <div class="collection__image">
+            <img src="assets/collection-9.png" alt="collection" />
+            <h4>GIRL SHOES</h4>
+            <p>$100.00 <del>$200</del></p>
+          </div>
+        </section>
+
+        <section class="gallery">
+          <div class="gallery__image">
+            <img src="assets/gallery-1.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-2.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-3.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-4.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-5.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-6.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-7.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-8.jpg" alt="gallery" />
+          </div>
+          <div class="gallery__image">
+            <img src="assets/gallery-9.jpg" alt="gallery" />
+          </div>
+        </section>
+
+        <section class="brands__container">
+          <div class="brand__image">
+            <img src="assets/brand-1.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-2.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-3.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-1.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-2.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-3.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-4.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-5.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-6.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-4.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-5.png" alt="brand" />
+          </div>
+          <div class="brand__image">
+            <img src="assets/brand-6.png" alt="brand" />
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer>
       <div class="section__container footer__container">
         <div class="footer__col">
-          <h3>Pathway<span>.</span></h3>
-          <p>
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
+          <h4>SHOPS</h4>
+          <p>Men</p>
+          <p>Women</p>
+          <p>Top Brands</p>
+          <p>Bags & Accessories</p>
+          <p>Lookbook</p>
         </div>
         <div class="footer__col">
-          <h4>Support</h4>
-          <p>FAQs</p>
-          <p>Terms & Conditions</p>
+          <h4>INFORMATION</h4>
+          <p>About Us</p>
+          <p>Customer Service</p>
+          <p>Manufacturers</p>
           <p>Privacy Policy</p>
-          <p>Contact Us</p>
+          <p>Blog</p>
         </div>
         <div class="footer__col">
-          <h4>Address</h4>
-          <p>
-            <span>Address:</span> 280 Wilson Street, Cima, California, 92323,
-            United States
-          </p>
-          <p><span>Email:</span> info@pathway.com</p>
-          <p><span>Phone:</span> +91 9876543210</p>
+          <h4>STAY CONNECTED</h4>
+          <div class="footer__socials">
+            <span><i class="ri-facebook-fill"></i></span>
+            <span><i class="ri-twitter-fill"></i></span>
+            <span><i class="ri-google-fill"></i></span>
+            <span><i class="ri-instagram-line"></i></span>
+          </div>
         </div>
       </div>
-      <div class="footer__bar">
-        Copyright © 2023 Web Design Mastery. All rights reserved.
+      <div class="section__container footer__bar">
+        <div class="copyright">
+          Copyright © 2023 Web Design Mastery. All rights reserved.
+        </div>
+        <div class="payment__cards">
+          <span><i class="ri-visa-fill"></i></span>
+          <span><i class="ri-bank-card-2-fill"></i></span>
+          <span><i class="ri-mastercard-line"></i></span>
+          <span><i class="ri-bank-card-2-line"></i></span>
+        </div>
       </div>
     </footer>
   </body>
