--- a/index.html
+++ b/index.html
@@ -11,30 +11,18 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul class="nav__links">
-        <li class="link logo">NIKE</li>
-        <li class="link">MEN</li>
-        <li class="link">WOMEN</li>
-        <li class="link">KIDS</li>
-        <li class="link">SPORTS</li>
-        <li class="link">BRANDS</li>
-        <li class="link">CUSTOMIZE</li>
-      </ul>
-      <div class="social__icons">
-        <span><i class="ri-facebook-fill"></i></span>
-        <span><i class="ri-twitter-fill"></i></span>
-        <span><i class="ri-google-fill"></i></span>
-        <span><i class="ri-instagram-line"></i></span>
-      </div>
+  <header class="header">
+    <a href="#" class="logo">Logo</a>
+
+    <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Gallery</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
     </nav>
-    <div class="section_container header__container">
-      <div class="header__content">
-        <h1>NIKE<br />SHOES</h1>
-        <p>SIGN UP AND GET 50% OFF</p>
-      </div>
-    </div>
+
+
   </header>
   <main class="main__container">
     <div class="main__content">
