--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <span></span>
             </label>
             <ul class="nav__links">
-                <li class="link logo">NIKE</li>
+                <li class="link logo"><img class="logo-img" src="assets/nike-logo.png" alt=""></li>
                 <li class="link">MEN</li>
                 <li class="link">WOMEN</li>
                 <li class="link">KIDS</li>
@@ -71,7 +71,7 @@
                 <label for="submit">Sign In</label>
             </div>
             <div class="sign-up-link">
-                <p>Don't have account?<a href="#">Sign Up</a></p>
+                <p>Don't have account? <a href="#">Sign Up</a></p>
             </div>
         </div>
     </section>
