--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
                 <span></span>
             </label>
             <ul class="nav__links">
-                <li class="link logo">NIKE</li>
+                <li class="link logo"><img class="logo-img" src="assets/nike-logo.png" alt=""></li>
                 <li class="link">MEN</li>
                 <li class="link">WOMEN</li>
                 <li class="link">KIDS</li>
@@ -46,7 +46,38 @@
         </div>
     </header>
 
-
+    <section class="form">
+        <div class="login-box">
+            <div class="login-header">
+                <h2 class="h2-login">Register</h2>
+            </div>
+            <div class="input-box">
+                <input type="text" class="input-field" placeholder="Email" autocomplete="off" required>
+            </div>
+            <div class="input-box">
+                <input type="password" class="input-field" placeholder="Password" autocomplete="off" required>
+            </div>
+            <div class="input-box">
+                <input type="password" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
+            </div>
+            <!-- <div class="forgot">
+                <section class="check">
+                    <input type="checkbox" id="check">
+                    <label for="check">Remember me</label>
+                </section>
+                <section class="check">
+                    <a href="#">Forgot password</a>
+                </section>
+            </div> -->
+            <div class="input-submit">
+                <button class="submit-btn" id="submit"></button>
+                <label for="submit">Register</label>
+            </div>
+            <div class="sign-up-link">
+                <p>Already have on account? <a href="#">Login</a></p>
+            </div>
+        </div>
+    </section>
 
 
 
