--- a/index.html
+++ b/index.html
@@ -13,35 +13,38 @@
 <body>
   <header>
     <nav>
-      <input type="checkbox" id="menu-toggle" class="menu-toggle">
-      <label for="menu-toggle" class="menu-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-      <ul class="nav__links">
-        <li class="link logo">NIKE</li>
-        <li class="link">MEN</li>
-        <li class="link">WOMEN</li>
-        <li class="link">KIDS</li>
-        <li class="link">SPORTS</li>
-        <li class="link">BRANDS</li>
-        <li class="link">CUSTOMIZE</li>
-      </ul>
-      <div class="social__icons">
-        <span><i class="ri-facebook-fill"></i></span>
-        <span><i class="ri-twitter-fill"></i></span>
-        <span><i class="ri-google-fill"></i></span>
-        <span><i class="ri-instagram-line"></i></span>
-      </div>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <ul class="nav__links">
+            <li class="link logo"><img class="logo-img" src="assets/nike-logo.png" alt=""></li>
+            <li class="link">MEN</li>
+            <li class="link">WOMEN</li>
+            <li class="link">KIDS</li>
+            <li class="link">SPORTS</li>
+            <li class="link">BRANDS</li>
+            <li class="link">CUSTOMIZE</li>
+
+
+        </ul>
+        <div class=" social__icons">
+            <span><i class="ri-facebook-fill"></i></span>
+            <span><i class="ri-twitter-fill"></i></span>
+            <span><i class="ri-google-fill"></i></span>
+            <span><i class="ri-instagram-line"></i></span>
+        </div>
+
     </nav>
     <div class="section_container header__container">
-      <div class="header__content">
-        <h1>NIKE<br />SHOES</h1>
-        <p>SIGN UP AND GET 50% OFF</p>
-      </div>
+        <div class="header__content">
+            <h1>NIKE<br />SHOES</h1>
+            <p>SIGN UP AND GET 50% OFF</p>
+        </div>
     </div>
-  </header>
+</header>
 
 
   <main class="main__container">
